Refactor settings page data rendering JS
- Now passing the list to the re-render function when have it already from the storage call (saving a storage read)
- A wrapper element is hidden when there's no allowlist data
- Refactored a single domain's rendering into its own function (less necessary in this case, yet makes for a good pattern when used on the popup later)
- Made the "remove domain" buttons into little "✕"es instead of just text saying "Remove"

--- a/settings/settings.css
+++ b/settings/settings.css
@@ -11,6 +11,7 @@ input::placeholder {
     background: color-mix(in oklab, var(--background) 80%, var(--foreground));
     border: none;
     border-radius: 1000em;
+    width: 1.5em;
     height: 1.5em;
     cursor: pointer;
 
