Rewrite of popup data rendering JS
- Separates host and portscans blocking sections, conditionally hiding them when no blocking has occurred
- Reordered portscan blocking ahead of tracking script blocking due to higher prevalence
- Uses only CSS for collapsing/showing the ports with a `:has(input:checked)` CSS selector trick
- Vastly simplifies HTML structure due to no longer needing to match bootstrap formatting
- Currently lacks animation when expanding the ports list. This is a compromise which could be fixed with JS (excessive and annoying) or with CSS once Firefox starts supporting `interpolate-size: allow-keywords`

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -62,3 +62,45 @@ h2 {
     mask-image: url("../icons/settings.png");
     mask-size: 100%;
 }
+
+/* Blocked port list styling */
+#blocked_ports ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 10px;
+}
+
+/* The host text display */
+#blocked_ports .host {
+    font-weight: bold;
+}
+
+/* The "View Ports" toggle */
+.ports-expansion-toggle {
+    cursor: pointer;
+    color: var(--red-text);
+    float: right;
+}
+.ports-expansion-toggle input {
+    display: none;
+}
+
+/* Expand the ports list when the toggle is enabled */
+.ports-expansion-target {
+    display: none;
+}
+.ports-expansion-toggle:has(input:checked) + .ports-expansion-target {
+    display: block;
+}
+
+
+/* Blocked tracking scripts list styling */
+#blocked_hosts ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 10px;
+}
+#blocked_hosts li {
+    color: var(--red-text);
+    font-weight: bold;
+}
