Animate the collapsible ports list to match prior behavior
TODO Once Firefox supports `interpolate-size: allow-keywords` we can remove this commit's JS additions in `PopupUI.js` and replace the CSS variable with `auto`.
Or it might be better to keep the JS approach for backwards compatibility with older browsers (Tor follows an ESR branch and might take a while to get support, for example).

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -87,10 +87,16 @@ h2 {
 
 /* Expand the ports list when the toggle is enabled */
 .ports-expansion-target {
-    display: none;
+    visibility: hidden; /* Prevents copying unwanted values */
+    overflow-y: hidden;
+    height: 0;
+
+    transition-property: height, visibility;
+    transition-duration: 0.25s;
 }
 .ports-expansion-toggle:has(input:checked) + .ports-expansion-target {
-    display: block;
+    visibility: visible;
+    height: var(--expanded-height); /* Replace with `auto` once `interpolate-size: allow-keywords` is supported in Firefox */
 }
 
 
