Minor popup styles tweak
Makes a slightly taller gap between the subheadings for "Settings", "Blocked Port Scans", etc. and their section's content. Most noticeable in the "Blocked Port Scans" section

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -29,6 +29,7 @@ main {
 /* Headings should be slightly smaller */
 h2 {
     font-size: 1.25rem;
+    margin-bottom: 0.25rem;
 }
 
 /* Settings switches need vertical padding when displayed on two rows */
